# MerchantBuccaneer

./: .gitignore  BUILD.md  CMakeLists.txt  README.md  build.bat  build_engine.bat  build_game.bat  clean.bat  install_deps.bat  run.bat  test_engine.bat
assets/models/blend/: Lowpoly_Props.blend1
docs/: GameDesignDocument.md  Tasks.md
engine/: .clang-tidy  CMakeLists.txt
engine/include/: IRenderer.h  IWindow.h  Launch.h  RendererAPI.h  benchmark.h  constants.h  intrinsics.h  renderer.h  window.h
engine/include/core/: Benchmark.h  Constants.h  File.cpp  File.h  IWindow.h  Intrinsics.h  Launch.h  MBMath.h  Math.h
engine/include/rendering/: IRenderer.h  IShader.h  Vertex.h  VertexBuffer.h
engine/src/: IWindow.cpp  Launch.cpp  MBMath.cpp  Math.cpp  Vertex.cpp  benchmark.cpp  renderer.cpp  window.cpp
engine/tests/: basic_shader.vs  benchmark_test.cpp  rendering_test.cpp
game/: CMakeLists.txt
game/assets/models/blend/: LowPolyNaturalGroup.blend  Lowpoly_Buildings.blend  Lowpoly_Buildings.blend1  Lowpoly_Props.blend
game/src/: launch.cpp
include/: benchmark.h  intrinsics.h
src/: benchmark.cpp  launch.cpp
tests/: benchmark_test.cpp
